--- a/Sem1.html
+++ b/Sem1.html
@@ -382,22 +382,39 @@
 
 		/* Footer - Better mobile layout */
 		.footer {
-			padding: 30px 0 15px;
-			text-align: center;
+			background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%) !important;
+			padding: 20px 0 10px;
+			text-align: left;
+		}
+
+		.footer .container {
+			padding-left: 15px;
+			padding-right: 15px;
 		}
 
 		.footer .row {
 			flex-direction: column;
+			gap: 18px;
 		}
 
 		.footer .col-md-4 {
-			margin-bottom: 30px;
+			margin-bottom: 0;
 			width: 100%;
+			text-align: left;
+		}
+
+		/* Hide Resources and Contact sections on mobile */
+		.footer .col-md-4:nth-child(2),
+		.footer .col-md-4:nth-child(3) {
+			display: none !important;
 		}
 
 		.footer h5 {
-			font-size: 15px;
-			margin-bottom: 15px;
+			font-size: 14px;
+			margin-bottom: 10px;
+			font-weight: 600;
+			border-bottom: none;
+			padding-bottom: 0;
 		}
 
 		.footer ul {
@@ -415,22 +432,44 @@
 		}
 
 		.footer ul li {
-			margin-bottom: 12px;
+			margin-bottom: 8px;
 		}
 
 		.footer ul li a {
-			font-size: 13px;
+			font-size: 12px;
+		}
+
+		.footer ul li a i {
+			font-size: 12px;
+			min-width: 16px;
 		}
 
 		.footer-contact p {
-			font-size: 13px;
-			margin-bottom: 10px;
+			font-size: 12px;
+			margin-bottom: 8px;
+		}
+
+		.footer-contact i {
+			font-size: 12px;
+			min-width: 16px;
+		}
+
+		/* Ensure all footer sections have dark background */
+		.footer *,
+		.footer .col-md-4,
+		.footer-contact {
+			background: transparent !important;
+		}
+
+		.footer .row>div {
+			background: transparent !important;
 		}
 
 		.footer-bottom {
-			margin-top: 20px;
-			padding-top: 15px;
-			font-size: 12px;
+			margin-top: 15px;
+			padding-top: 12px;
+			font-size: 11px;
+			text-align: center;
 		}
 
 		/* Content adjustments */
