Update Detailed Timetable button to orange outline style

--- a/Sem1.html
+++ b/Sem1.html
@@ -549,8 +549,9 @@
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav text-uppercase">
 						<li>
-							<a href="http://timetabling.uonbi.ac.ke/" target="_blank"><i class="fa fa-life-ring"></i>
-								Timetables Portal</a>
+							<a href="http://timetabling.uonbi.ac.ke:8080/fst/" target="_blank"><i
+									class="fa fa-calendar"></i>
+								Timetabling Portal</a>
 						</li>
 						<li>
 							<a href="http://smis.uonbi.ac.ke/" target="_blank"><i class="fa fa-life-ring"></i> Student
@@ -620,6 +621,11 @@
 								style="display:none; margin-top: 5px;">
 								<i class="fa fa-download"></i> Download PDF
 							</button>
+							<a href="http://timetabling.uonbi.ac.ke:8080/fst/gwt.jsp?page=timetable#date=&events=&term=FEB--JUNE2026FST&type=curriculum&name="
+								target="_blank" class="btn btn-block"
+								style="margin-top: 10px; border: 2px solid #ff8c00; background: transparent; color: #ff8c00; font-weight: 600;">
+								<i class="fa fa-calendar-check-o"></i> Personalised Timetable
+							</a>
 						</div>
 
 						<!-- <h5><i class="fa fa-link"></i> Quick Links</h5>
